# astra-update

./: BUILD.txt  CMakeLists.txt  README.md
cmake/: CMakeLists.macos.txt
include/: astra_boot_firmware.hpp  astra_device.hpp  astra_device_manager.hpp  astra_update.hpp  boot_firmware_collection.hpp  device.hpp  flash_image.hpp  image.hpp  usb_transport.hpp
lib/: CMakeLists.txt  astra_boot_firmware.cpp  astra_boot_firmware.hpp  astra_boot_image.cpp  astra_boot_image.hpp  astra_boot_images.cpp  astra_boot_images.hpp  astra_console.cpp  astra_console.hpp  astra_device.cpp  astra_device.hpp  astra_device_manager.cpp  astra_log.cpp  astra_update.cpp  boot_firmware_collection.cpp  boot_firmware_collection.hpp  boot_firmware_images.hpp  boot_image_collection.cpp  boot_image_collection.hpp  boot_images_collection.cpp  boot_images_collection.hpp  console.cpp  console.hpp  device.hpp  emmc_flash_image.cpp  emmc_flash_image.hpp  flash_image.cpp  flash_image.hpp  image.cpp  image.hpp  spi_flash_image.cpp  spi_flash_image.hpp  usb.cpp.hold  usb_device.cpp  usb_device.hpp  usb_transport.cpp  usb_transport.hpp  utils.cpp  utils.hpp  win_usb_transport.cpp  (+1 more)
lib/platform/: posix_utils.cpp  windows_utils.cpp
platform/: CMakeLists.linux.txt  CMakeLists.windows.txt
src/: CMakeLists.txt  astra-boot.cpp  astra-update.cpp  main.cpp
